--- a/MVC-TV-Shop/Views/Tvs/Details.cshtml
+++ b/MVC-TV-Shop/Views/Tvs/Details.cshtml
@@ -15,6 +15,9 @@
 	<h4>Year</h4>
 	<p>@Model.Year</p>
 
+	<h4>Resolution</h4>
+	<p>@Model.Resolution</p>
+
 	<h4>Price</h4>
 	<p>@Model.Price hryvna</p>
 </section>
