--- a/MVC-TV-Shop/Views/Tvs/Edit.cshtml
+++ b/MVC-TV-Shop/Views/Tvs/Edit.cshtml
@@ -2,10 +2,10 @@
 
 <div>
 	<a asp-action="Index" class="btn btn-dark">Back</a>
-	<h1 class="d-inline-block align-middle">Create new TV</h1>
+	<h1 class="d-inline-block align-middle">Edit TV</h1>
 </div>
 <hr />
-<form asp-action="Create" method="post" class="row g-3">
+<form asp-action="Edit" method="post" class="row g-3">
     <div class="col-12">
         <label asp-for="Model" class="form-label">Model</label>
         <input asp-for="Model" type="text" class="form-control" placeholder="Samsung QE55QN90BAUXUA Neo QLED">
@@ -32,6 +32,6 @@
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="col-md-6">
-        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-primary">Edit</button>
     </div>
 </form>
