--- a/MVC-TV-Shop/Views/Tvs/Create.cshtml
+++ b/MVC-TV-Shop/Views/Tvs/Create.cshtml
@@ -1,10 +1,8 @@
 ﻿@model Data.Models.TVModel;
 
-<div>
-	<a asp-action="Index" class="btn btn-dark">Back</a>
-	<h1 class="d-inline-block align-middle">Create new TV</h1>
-</div>
+<h1>Create new TV</h1>
 <hr />
+
 <form asp-action="Create" method="post" class="row g-3">
     <div class="col-12">
         <label asp-for="Model" class="form-label">Model</label>
