--- a/MVC-TV-Shop/Views/Tvs/Edit.cshtml
+++ b/MVC-TV-Shop/Views/Tvs/Edit.cshtml
@@ -26,7 +26,7 @@
     </div>
     <div class="col-md-6">
         <label asp-for="Price" class="form-label">Price</label>
-        <input asp-for="Price" type="number" class="form-control" placeholder="999">
+        <input asp-for="Price" class="form-control" placeholder="999">
         <span asp-validation-for="Price" class="text-danger"></span>
     </div>
     <div class="col-md-6">
