--- a/MVC-TV-Shop/Views/Tvs/Index.cshtml
+++ b/MVC-TV-Shop/Views/Tvs/Index.cshtml
@@ -14,8 +14,9 @@
       <th scope="col">Image</th>
       <th scope="col">Model</th>
       <th scope="col">Diagonal</th>
+      <th scope="col">Color</th>
       <th scope="col">Price</th>
-      <th></th>
+      <th scope="col">Actions</th>
     </tr>
   </thead>
   <tbody>
@@ -30,6 +31,7 @@
                 </td>
                 <td>@tv.Model</td>
                 <td>@tv.Diagonal</td>
+                <td>@tv.Color?.Name</td>
                 <td>@tv.Price hryvna</td>
                 <td>
                     <a asp-controller="TVs" asp-action="Details" asp-route-id="@tv.Id" class="btn btn-primary">Details</a>
